# artifact-registry-cron-replication-example

./: .gitignore  AGENTS.md  Dockerfile  README.md
.github/workflows/: ci.yaml
app/: .dockerignore  Dockerfile  client.py  config.py  main.py  pyproject.toml  requirements.txt
app/tests/: test_client.py  test_main.py
conductor/: index.md  plan.md  product-guidelines.md  product.md  tech-stack.md  tracks.md
conductor/tracks/implement_core_infrastructure_and_fastapi_application_for_artifact_registry_replication_20260222/: index.md  metadata.json  plan.md  spec.md
infra/: main.tf  terraform.tfvars.example  variables.tf
scripts/: deploy.sh
